--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 		</dependency>
 		<!-- Resilience4j -->
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
+		    <groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
 		</dependency>
 		<!-- SpringBoot Dev Tools -->
@@ -107,7 +107,21 @@
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.11</version>
 		</dependency>
-
+		<!-- jamon -->
+		<dependency>
+			<groupId>com.jamonapi</groupId>
+			<artifactId>jamon</artifactId>
+			<version>2.81</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jamon</groupId>
+			<artifactId>jamon-junit</artifactId>
+			<version>2.4.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-aspects</artifactId>
+		</dependency>
 		
 	</dependencies>
 
